# coditect-citus-django-infra

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  P1-T01-COMPLETION-SUMMARY.md  P1-T02-COMPLETION-SUMMARY.md  PHASE-0-COMPLETION-SUMMARY.md  PROJECT-PLAN.md  README.md  TASKLIST-WITH-CHECKBOXES.md  TASKLIST.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  update_tasklist.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  tofu-apply.yml  tofu-drift-detection.yml  tofu-plan.yml  tofu-validate.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GCP-INFRASTRUCTURE-INVENTORY.md  GCP-PROJECT-SETUP-COMPLETE.md  GCP-SETUP.md  LOCAL-DEVELOPMENT.md  SECURITY-ADVISORY-2025-11-23.md  SECURITY.md
kubernetes/base/: kustomization.yaml  limit-ranges.yaml  namespaces.yaml  network-policies.yaml  rbac.yaml  resource-quotas.yaml
kubernetes/overlays/dev/: kustomization.yaml
kubernetes/overlays/production/: kustomization.yaml
kubernetes/overlays/staging/: kustomization.yaml
opentofu/: QUICK-START.md  README.md
opentofu/backend/: create-backends.sh
opentofu/environments/production/: main.tf  variables.tf
opentofu/environments/staging/: variables.tf
opentofu/modules/cloudsql/: outputs.tf  variables.tf  versions.tf
opentofu/modules/gke/: outputs.tf  variables.tf
opentofu/modules/networking/: versions.tf
opentofu/modules/redis/: README.md  outputs.tf  variables.tf
reseach/: 🔑 Technology-Stack-for-1M.md
scripts/: gcp-setup.sh  iam-setup.sh  install-tools.sh  verify-tools.sh
terraform/: README.md
terraform/backend/: README.md
terraform/environments/dev/: backend.tf  main.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/environments/production/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example
terraform/modules/cloudsql/: README.md  main.tf
terraform/modules/firewall/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/gke/: README.md  main.tf  versions.tf
terraform/modules/networking/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/redis/: main.tf  versions.tf
terraform/modules/secrets/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
