[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coditect-citus-django-infra"
version = "0.1.0"
description = "CODITECT Hyperscale Multi-Tenant SaaS Platform Infrastructure"
authors = [{name = "AZ1.AI INC", email = "dev@coditect.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["django", "citus", "multi-tenant", "saas", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "Django>=5.0,<5.1",
    "djangorestframework>=3.14,<4.0",
    "django-multitenant>=3.2,<4.0",
    "psycopg[binary]>=3.1,<4.0",
    "celery[redis]>=5.3,<6.0",
    "django-celery-beat>=2.5,<3.0",
    "redis>=5.0,<6.0",
    "gunicorn>=21.2,<22.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "authlib>=1.3,<2.0",
    "stripe>=7.0,<8.0",
    "sentry-sdk>=1.40,<2.0",
    "prometheus-client>=0.19,<1.0",
    "opentelemetry-api>=1.22,<2.0",
    "opentelemetry-sdk>=1.22,<2.0",
    "opentelemetry-instrumentation-django>=0.43b0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-django>=4.7,<5.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-asyncio>=0.23,<1.0",
    "factory-boy>=3.3,<4.0",
    "faker>=22.0,<23.0",
    "black>=23.12,<26.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.8,<2.0",
    "django-stubs>=4.2,<5.0",
    "djangorestframework-stubs>=3.14,<4.0",
    "pre-commit>=3.6,<4.0",
    "ipython>=8.19,<9.0",
    "ipdb>=0.13,<1.0",
]

[tool.setuptools]
packages = ["coditect_platform"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected (OK in tests)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow asserts in tests
"**/settings.py" = ["F405"]  # Allow star imports in settings

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "stripe.*",
    "factory.*",
    "faker.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "coditect_platform.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "coditect_platform.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=coditect_platform",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, external services)",
    "slow: Slow tests (>1 second)",
]

[tool.coverage.run]
source = ["coditect_platform"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/settings.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
